# Ex2-Final

./: AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.h  Client.cpp  Client.h  Console.cpp  Console.h  Disk.cpp  Disk.h  GameFlow.cpp  HumanP.cpp  HumanP.h  ReversiRules.cpp  ReversiRules.h  Visualization.h  gtest_main.cpp  info.txt  main.cpp
Tests/: Test_AIPlayer.cpp  Test_Board.cpp  Test_HumanP.cpp  Test_ReversiRules.cpp
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Cell.h  Console.cpp  Console.h  GameFlow.cpp  GameFlow.h  GeneralPlayer.h  HumanP.cpp  HumanP.h  Point.h  ReversiRules.cpp  ReversiRules.h  Visualization.h  main.cpp
